16 OCT 2023:
    - Countries that have been displayed within the past 10 rounds are no longer candidates for the next country.
    - (hopefully) improved SEO
    
15 OCT 2023:
    - Implement changelog
    - Update Info modal
    - Add Google Analytics
    - Add animated world map in title screen
    - TODO page now displays the same way as changelog
    - Slight UI improvements
    - Song now pauses when incorrect
    - All available countries now have songs
    - OFFICIAL RELEASE DAY YAYY :D