@@ -11,6 +11,7 @@
 <link href="https://cdn.jsdelivr.net/gh/StephanWagner/svgMap@v2.10.1/dist/svgMap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://raw.githubusercontent.com/bean-frog/FontAwesome-Pro-6.4.0/main/fa6.4.2.all.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/daisyui/3.9.2/full.css" integrity="sha512-O+Fc80nw5NdS/UwWk8ZQIpJbqYV7qQH6s1E1DwAgJmYwW0AE2liPFEgisBFRfzEfnKCPm3m++Yh04eR9JGk6nA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <title>TuneGuessr</title>
 </head>
@@ -35,7 +36,15 @@
         </div>
     </div>
     <div class="w-full h-1/3 text-black flex flex-col items-center justify-start mt-6">
+      <div id="checkarea">
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="playPauseButton" onclick="toggleAudio()">
+          <i id="icon" class="fa fa-pause"></i>
+        </button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="replayButton" onclick="replayAudio()">
+          <i id="icon" class="fa fa-rotate-left"></i>
+        </button>
         <button class="btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded" id="check">CHECK</button>
+      </div>
         <audio id="tuneguessr-audio" class="mt-4"></audio>
         <div id="status" class="w-full h-fit min-h-1/2 text-white font-bold text-lg p-4 rounded mt-4"></div>
     </div>
@@ -50,12 +59,13 @@
     <dialog id="settingModal" class="modal">
       <div class="modal-box">
         <h3 class="font-bold text-xl mb-4">Options</h3>
-        <!--<div class="mb-4">
+        <i class="fas fa-play-pause"></i>
+        <div class="mb-4">
           <label for="metalmode" class="flex items-center space-x-2">
             <span>Metal Mode (all songs are metal)</span>
             <input type="checkbox" name="metalmode" id="metalmodecheck" class="form-checkbox h-4 w-4 text-gray-600">
           </label>
-        </div> -->
+        </div> 
 <div class="mb-4">
   <label for="distinguish" class="flex items-center space-x-2">
     <span>Lighter color for un-used countries</span>
@@ -134,6 +144,7 @@ function initSvgMap() {
       colorNoData: '#ddd',
       noDataText: "",
       initialPan: { x: -1000, y: 60 },
+      initialZoom: 1,
       onGetTooltip: () => {
         return '';
       }
